# dbt-proserv

./: README.md  README_TEMPLATE.md  dbt_project.yml  dbt_proserv_style_guide.md  package-lock.yml  packages.yml  profiles.yml
.dbt/prod/: manifest.json
.github/: CODEOWNERS  pull_request_template.md  release_pull_request_template.md
.github/workflows/: run-dbt-job-on-merge.yml
_demos/programmatic_model_gen/: DEMO.md
_demos/programmatic_model_gen/macros/: generate_inc_stream_model_sql.sql
_demos/programmatic_model_gen/scripts/: create_dbt_inc_stream_models.py
api_scripts/: deactivate_users_old_logins.py
api_scripts/airflow-provider/: README.MD  dbt_cloud_run_job_create_operator.py
api_scripts/dbtcloud-hec/: README.md  dbtcloud_audit_lambda.py
api_scripts/dlt/dlt-dbt-cloud/: .envrc.example  .gitignore  README.md  pyproject.toml
api_scripts/dlt/dlt-dbt-cloud/dlt_dbt_cloud/: dbt_cloud_audit_logs.py
macros/: get_unique_nodes.sql
models/demos/: test_model.sql
models/demos/incremental_merge_timestamps/: incremental_with_insert_and_update_timestamps.sql
models/demos/incremental_windowing/: incremental_on_historic_data_add_valid_dates.sql
models/marts/core/: _models.yml  dim_customers.sql  dim_parts.sql  dim_suppliers.sql  fct_order_items.sql  fct_orders.sql
models/marts/dbt_artifacts_less/: dbt_artifacts_invocations_and_objects.sql  dbt_current_models.sql  (+4 more)
snapshots/dbt_artifacts_less/: dbt_artifacts_exposures.sql  dbt_artifacts_models.sql  dbt_artifacts_seeds.sql  dbt_artifacts_snapshots.sql  dbt_artifacts_sources.sql  dbt_artifacts_tests.sql
(+16 files in other folders)
